--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,6 +1,5 @@
 *{
     box-sizing: border-box;
-   z-index:1;
 }
 
 
@@ -40,6 +39,8 @@ body {
     height:52px;
     border-radius: 4px; 
     border: 1px solid #FFCD04;  
+    cursor: pointer;
+
 }
 
 .addButton{
@@ -76,6 +77,7 @@ body {
     font-size: 18px;
     line-height: 27px;
     color: black;
+    cursor:default;
     
 }
 
@@ -102,7 +104,7 @@ body {
 }
 
 .tasks:hover{
-    background-color: #dad2d2;
+    background-color: #f6f6f6;
 }
 
 .nested-task {
@@ -130,7 +132,7 @@ body {
     font-weight: 400;
     font-size: 18px;
     line-height: 32px;
-    color: #666666; 
+    cursor:default
     
     
 }
@@ -161,6 +163,7 @@ body {
     letter-spacing: 0em;
     font-family: 'Poppins';
     color: #000000;
+    cursor: default;
 }
 
 .warningMassage{
@@ -180,13 +183,14 @@ body {
     left: 0px;
     top: 0px;
     border-radius: 4px;
-    flex-direction: column;
     position: absolute;
     margin-top: 395.81px;
     margin-left:520px;
     z-index:2;
     background-color:  #FFFFFF;
     opacity: 1;
+    padding: 10px;
+
  
 }
 
@@ -194,7 +198,7 @@ body {
     top:0;
     left:0;
     width: 100%;
-    height: 100vh;
+    height: 800px;
     position: absolute;
     background:#dad2d2;
     opacity: 0.4;
@@ -206,35 +210,48 @@ body {
 .questionContent{
     width: 296px;
     height: 28px;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 0em;
     font-family: 'Poppins';
     line-height: 28px;
-    text-align: right;
-    color: #008594;   
+    color: #008594;  
+    text-align: center;
+    margin-left: 10px;
+    cursor: default;
+}
+.questionDiv{
+    margin-left: 30px;
 }
 
 
 .answers{
     margin-top: 40px;
+    
 }
 .answerYes{
     display: inline;
-    margin-left: 151px;
+    margin-left: 141px;
     cursor: pointer;
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0em;
+    color: #174348;
+
+
 }
 .answerNo{
     display: inline;
     margin-left: 40px;
     cursor: pointer;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0em;
+    font-family: Poppins;
+    color: #174348;
+
 }
 
-
-@media screen and (max-width: 320px) {
-    *{
-       font-size: 6px;
-       margin-top: 5px;
-    } 
-
-    .inputField{
-        height: 30%;
-    }
-}
