--- a/src/components/index.css
+++ b/src/components/index.css
@@ -2,11 +2,15 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 10px;
+}
+
 
 body {
     padding-top: 229px;
     background: white;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .inputField{
@@ -14,7 +18,7 @@ body {
     width: 100%;
     border-radius: 0px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin-left: 80px;
    
 }
@@ -23,13 +27,6 @@ body {
     display: flex;
     align-items: center;
 }
-
-.input{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 
 
 
@@ -40,8 +37,10 @@ body {
     border-radius: 4px; 
     border: 1px solid #FFCD04;  
     cursor: pointer;
+    padding-left: 16px;
 
 }
+
 
 .addButton{
     border-radius: 4px;
@@ -54,20 +53,21 @@ body {
     margin-left: 55.5px;
     box-shadow: 1px 1px black ;
     cursor: pointer;
+    margin-top: 61px;
+
 }
 
 .deleteButton{
-    color:#174348;
-    height: 13px;
-    width: 13px;
     left: 5px;
     top: 5px;
-    border-radius: 0px;
+    font-size: 3rem;
+    margin-left: auto;
     cursor: pointer;
-    margin-left: 398px;
+    font-family: cursive;
+    rotate:-3deg;
 }
 
-.addButton:active{
+.addButton:active {
     box-shadow: 1px 1px black inset;
 }
 
@@ -78,7 +78,13 @@ body {
     line-height: 27px;
     color: black;
     cursor:default;
+    align-self: start;
     
+}
+.warning-input{
+    display: flex;
+    flex-direction: column;
+
 }
 
 
@@ -86,10 +92,11 @@ body {
     height: 50vh;
     width:calc(100%-10px);
     border-radius: 0px;
-    margin-top:82px;
+    margin-top:92px;
     margin-left: 0px;
     margin-left: 0;   
-    overflow: auto; 
+    overflow:auto; 
+
 }
 .tasks{
     padding:20px;
@@ -100,7 +107,6 @@ body {
     align-items: center;
     justify-content: space-between;
 
-    
 }
 
 .tasks:hover{
@@ -119,10 +125,7 @@ body {
     cursor: pointer;
     margin-right: 35px;
     margin-left: 83px;
-    
-    
 }
-
 
 
 
@@ -140,23 +143,20 @@ body {
 .hide {
     display: flex;
     align-items: center;
-    position: absolute;
-    top: 146px;
-    right: 204px;
     z-index: 0;
-    
-
+    width:80%;
+    margin:0 auto;
+    justify-content: flex-end;
 }
 
 .hideAll{
-    height: 17.856285095214844px;
+    height: 17.8px;
     width: 18px;
     accent-color: #008594;
     cursor: pointer;
 }
 
 .hideText{
-    width: 145px;
     font-size: 18px;
     font-weight: 500;
     line-height: 0px;
@@ -174,18 +174,21 @@ body {
     font-size: 12px;
     line-height: 18px;
     color: #FF3104;
-    margin-top:10px
+    margin-top:10px;
+    align-self: flex-start;
+}
+.task-input{
+    display: flex;
+    flex-direction: column;
 }
 
 .deleteWindow{
     height: 200px;
     width: 400px;
-    left: 0px;
-    top: 0px;
+    top: calc(60vh - 100px);
+    left: calc(50% - 200px);
     border-radius: 4px;
     position: absolute;
-    margin-top: 395.81px;
-    margin-left:520px;
     z-index:2;
     background-color:  #FFFFFF;
     opacity: 1;
@@ -198,6 +201,7 @@ body {
     top:0;
     left:0;
     width: 100%;
+    height: 850px;
     height: 800px;
     position: absolute;
     background:#dad2d2;
@@ -253,5 +257,89 @@ body {
     font-family: Poppins;
     color: #174348;
 
+}
+
+
+@media screen and (max-width: 450px) {
+    *{
+       font-size: 15px;
+       margin-top:  0px;
+       margin-left: 0px;
+    }
+
+    .deleteWindow {
+        width: 324px;
+        height: 140px;
+        top: calc(60vh - 70px);
+        left: calc(50% - 162px);
+    }
+
+    .inputField{
+        width:100%;
+        margin-left:10px;
+        height:10%;
+        margin-top:0px;
+        flex-direction: column;
+    }
+    .button-input{
+        display: flex;
+        flex-direction: column;
+        width:95%
+    }
+
+    .inputText{
+        width: 300px;
+    }
+    .taskText{
+        margin-top: 5px;
+        font-size: 15px;
+        margin-left: 30px;
+    }
+
+    .hideText{
+        height:10%;
+        font-size:15px;
+        align-self: top;
+        margin: 3px;
+
+    }
+    .hideAll{
+        height:18px;
+        width: 18px;
+        align-self: top;
+    }
+
+
+    .addButton {
+        margin-left: auto;
+        margin-right: 30px;
+        margin-top: 16px;
+    }
+    
+    .check {
+        margin-left: 27px;
+    }
+    body {
+        padding-top: 68px;
+    }
+
+    .questionContent{
+        margin-left:0px;
+        text-align: left;
+    }
+    
+    .answerYes{
+        margin-left:114px;
+    }
+    .deleteButton{
+        left: 5px;
+        top: 5px;
+        font-size: 2rem;
+        height: 13px;
+        width: 13px;
+    }
+    .tasks{
+        width: 80%;
+    }
 }
 
