--- a/src/components/index.css
+++ b/src/components/index.css
@@ -10,7 +10,7 @@ html {
 body {
     padding-top: 229px;
     background: white;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .inputField{
@@ -202,7 +202,7 @@ body {
     left:0;
     width: 100%;
     height: 850px;
-    height: 800px;
+    height: 1500px;
     position: absolute;
     background:#dad2d2;
     opacity: 0.4;
