--- a/src/components/index.css
+++ b/src/components/index.css
@@ -201,7 +201,7 @@ body {
     top:0;
     left:0;
     width: 100%;
-    height: auto;
+    height: 1500px;
     position: absolute;
     background:#dad2d2;
     opacity: 0.4;
